feat(server): add date range to get profit
