# server/services/stock.ts
@@ -1,6 +1,8 @@
 import { IStock } from '../interfaces/IStock';
 import { getAleatoryPrice } from '../utils';
 
+const MAX_LOSS_EARNINGS = 30;
+
 export class Stock implements IStock {
   name: string;
   buyPrice: number;
@@ -11,7 +13,9 @@ export class Stock implements IStock {
     this.buyPrice = buyPrice;
   }
 
-  getPrice(date: string) {
-    this.price = getAleatoryPrice();
+  getPrice(date: Date) {
+    const minPrice = this.buyPrice <= MAX_LOSS_EARNINGS ? 0 : this.buyPrice - MAX_LOSS_EARNINGS;
+    const maxPrice = this.buyPrice + MAX_LOSS_EARNINGS;
+    this.price = getAleatoryPrice(minPrice, maxPrice);
   }
 }
